take value into session

--- a/templates/viewgraph.html
+++ b/templates/viewgraph.html
@@ -34,7 +34,7 @@
                     type: 'scatter',
                     data: {
                         datasets: [{
-                            label: '# of Votes',
+                            label: labels,
                             data: defaultData,
                             backgroundColor: ['red'],
                             pointBorderWidth: 2, pointRadius: 2,
