--- a/templates/setgraph.html
+++ b/templates/setgraph.html
@@ -7,8 +7,7 @@
 
 <body>
     เลือกวันเวลาข้อมูลมาวิเคราะห์
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
+    <form method="GET" enctype="multipart/form-data">
     ด/ว/ป ตั้งแต่  <input type="date" name="startdate"> ถึง ด/ว/ป <input type="date" name="enddate">
     <input type="submit" value="Submit">
 </body>
