--- a/templates/viewgraph.html
+++ b/templates/viewgraph.html
@@ -29,16 +29,18 @@
     </ul>
 
     <br>
-<div style="padding: 0.5em">
-    <canvas id="graphId" height="200" ></canvas>
-</div><!-- 
+    <div style="padding: 0.5em">
+        <canvas id="graphId" height="200"></canvas>
+    </div>
+    <!-- 
     <button id="fat">Fat Data</button> 
-    <button id="randomizeData">Randomize Data</button>   -->  
+    <button id="randomizeData">Randomize Data</button>   -->
 
     <script>
         var endpoint = '/api/data';
         var defaultData = [];
         var labels = [];
+        var googlequery = [];
 
         $.ajax({
             method: "GET",
@@ -46,135 +48,148 @@
             success: function (data) {
                 labels = data.labels;
                 defaultData = data.dataset;
+                googlequery = data.googledata;
 
-                for( i = 0 ; i!= defaultData.length ; i++){
+                for (i = 0; i != defaultData.length; i++) {
                     defaultData[i]['x'] = defaultData[i].AGE;
                     defaultData[i]['y'] = defaultData[i].BMI;
 
                 }
+
+                for ( i = 0 ; i!= googlequery.length; i++){
+                    googlequery[i]['x'] = googlequery[i].age;
+                    googlequery[i]['y'] = googlequery[i].movementspeed;
+                }
+
                 plot()
             }
         });
 
-        function plot() {        
+        function plot(datalist) {
             var ctx = document.getElementById("graphId").getContext('2d');
-            window.myScatter = Chart.Scatter(ctx, 
-            {
-                type: 'scatter',
-                data: 
+            window.myScatter = Chart.Scatter(ctx,
                 {
-                    datasets: 
-                    [{
-                        label: labels,
-                        data: defaultData,
-                        backgroundColor: ['red'],
-                        pointBorderWidth: 3, pointRadius: 3,
-                        pointHoverBorderWidth: 3, pointHoverRadius: 3,
-                    }]
-                },
-
-                options: 
-                {
-                    title: 
+                    type: 'scatter',
+                    data:
                     {
-                        display: true,
-                        text: "35 Fastest times up Alpe d'Huez"
+                        datasets:
+                            [{
+                                label: labels,
+                                data: datalist,
+                                backgroundColor: ['red'],
+                                pointBorderWidth: 3, pointRadius: 3,
+                                pointHoverBorderWidth: 3, pointHoverRadius: 3,
+                            }]
                     },
 
-                    legend: 
+                    options:
                     {
-                        display: true,
-                    },
-
-                    showLines: false,
-                    scales: 
-                    {
-                        yAxes: 
-                        [{
+                        title:
+                        {
                             display: true,
-                            scaleLabel: 
-                            {
-                                display: true,
-                                labelString: 'X_AXIS',
-                                fontSize: 16
-                            },
-                            ticks: 
-                            {
-                                beginAtZero:true,
-                                fontSize: 14
-                            }
-                        }],
-                        xAxes: 
-                        [{
-                            type: 'linear',
-                            position: 'bottom',
+                            text: "35 Fastest times up Alpe d'Huez"
+                        },
+
+                        legend:
+                        {
                             display: true,
-                            scaleLabel: 
-                            {
-                                display: true,
-                                labelString: 'Y_AXIS',
-                                fontSize: 16
-                            },
-                            gridLines: 
-                            {
-                                display: true
-                            },
-                            ticks: 
-                            {
-                                beginAtZero:false,
-                                fontSize: 14,
-                            }
-                        }]
-                    },
-                    tooltips: {
-                        displayColors: false,
-                        callbacks: {
-                          title: function(tooltipItems, data) {
-                            var str_json = "";
-                            count = 0;
-                            for(var obj in defaultData[tooltipItems[0].index]){
-                                str_json += obj + ": "+ defaultData[tooltipItems[0].index][obj] + "\n";
-                                count  = count + 1
-                if(count >= 10){ //cut waste attribute
-                    break;
-                }
-            }
-            return  str_json;
-        },
+                        },
 
-        label: function(tooltipItems, data) {
-            return "";
+                        showLines: false,
+                        scales:
+                        {
+                            yAxes:
+                                [{
+                                    display: true,
+                                    scaleLabel:
+                                    {
+                                        display: true,
+                                        labelString: 'Y_AXIS',
+                                        fontSize: 16
+                                    },
+                                    ticks:
+                                    {
+                                        beginAtZero: true,
+                                        fontSize: 14
+                                    }
+                                }],
+                            xAxes:
+                                [{
+                                    type: 'linear',
+                                    position: 'bottom',
+                                    display: true,
+                                    scaleLabel:
+                                    {
+                                        display: true,
+                                        labelString: 'X_AXIS',
+                                        fontSize: 16
+                                    },
+                                    gridLines:
+                                    {
+                                        display: true
+                                    },
+                                    ticks:
+                                    {
+                                        beginAtZero: false,
+                                        fontSize: 14,
+                                    }
+                                }]
+                        },
+                        // tooltips: {
+                        //     displayColors: false,
+                        //     callbacks: {
+                        //         title: function (tooltipItems, data) {
+                        //             var str_json = "";
+                        //             count = 0;
+                        //             for (var obj in defaultData[tooltipItems[0].index]) {
+                        //                 str_json += obj + ": " + defaultData[tooltipItems[0].index][obj] + "\n";
+                        //                 count = count + 1
+                        //                 if (count >= 10) { //cut waste attribute
+                        //                     break;
+                        //                 }
+                        //             }
+                        //             return str_json;
+                        //         },
+
+                        //         label: function (tooltipItems, data) {
+                        //             return "";
+                        //         }
+                        //     }
+                        // }
+
+                    }
+
+                });
         }
-    }
-}
 
-}
 
-});
-        }
 
-        document.getElementById('bmi').addEventListener('click', function() {
+        document.getElementById('bmi').addEventListener('click', function () {
 
-            for( i = 0 ; i!= defaultData.length ; i++){
+            for (i = 0; i != defaultData.length; i++) {
                 defaultData[i]['x'] = defaultData[i].AGE;
                 defaultData[i]['y'] = defaultData[i].BMI;
 
             }
-            plot()
+            plot(defaultData)
         });
 
-        document.getElementById('fat').addEventListener('click', function() {
+        document.getElementById('fat').addEventListener('click', function () {
 
-            for( i = 0 ; i!= defaultData.length ; i++){
+            for (i = 0; i != defaultData.length; i++) {
                 defaultData[i]['x'] = defaultData[i].AGE;
                 defaultData[i]['y'] = defaultData[i].FATAMT / defaultData[i].FFMAMT;
 
             }
-            plot()
+            plot(defaultData)
         });
-        
 
-        
+        document.getElementById('energy').addEventListener('click', function () {
+            plot(googlequery)
+        });
+
+
+
     </script>
 
 </body>
