--- a/templates/graphtest.html
+++ b/templates/graphtest.html
@@ -1,132 +1,111 @@
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+{% load static %}
 
+<!doctype html>
+<html>
 
-
-
- <canvas id="outputCanvas" width="500" height="300">
-
- 
-<script>
-var ctx = document.getElementById("outputCanvas").getContext('2d');
-
-axios.get('https://raw.githubusercontent.com/FreeCodeCamp/ProjectReferenceData/master/cyclist-data.json')
-  .then(function (response) {
-  console.log(response);
-  var colouring = [];
-  var data = [];
-  var dopingData = [];
-  var notDopingData = [];
-  
-  /*var description = document.getElementById("description");
-  description.innerText = response.data.description;*/
-  
-  for (var i = 0; i < response.data.length; i++) {
-    if (response.data[i]["Doping"] === "") {
-      notDopingData.push({x: parseFloat(response.data[i]['Time'].replace(':','.')), y: response.data[i]['Place'], id: i});
-    } else {
-      dopingData.push({x: parseFloat(response.data[i]['Time'].replace(':','.')), y: response.data[i]['Place'], id: i});
+<head>
+  <title>Horizontal Bar Chart</title>
+  <script src= "{% static "admin/node_modules/chart.js/dist/Chart.bundle.js" %}" ></script>
+  <script src="{% static "admin/node_modules/chartjs-chart-box-and-violin-plot/build/Chart.BoxPlot.js" %}" type="text/javascript"></script>  
+  <script src="https://unpkg.com/d3-random@latest/dist/d3-random.js"></script>
+  <script src="{% static "admin/node_modules/chartjs-chart-box-and-violin-plot/build/utils.js" %}"></script>  
+  <style>
+    canvas {
+      -moz-user-select: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
     }
-  }
-  var myChart = new Chart(ctx, {
-    type: 'scatter',
-    data: {
-      label: 'Scatter Dataset',
+  </style>
+</head>
+
+<body>
+  <div id="container" style="width: 75%;">
+    <canvas id="canvas"></canvas>
+  </div>
+  <button id="randomizeData">Randomize Data</button>
+  <button id="addDataset">Add Dataset</button>
+  <button id="removeDataset">Remove Dataset</button>
+  <button id="addData">Add Data</button>
+  <button id="removeData">Remove Data</button>
+  <script>
+    const samples = this.Samples.utils;
+    var color = Chart.helpers.color;
+    var boxplotData = {
+      labels: samples.months({ count: 7 }),
       datasets: [{
-          data: notDopingData,
-          label: 'No Doping',
-          backgroundColor: 'rgba(255, 0, 0, 1)',
-        },
-        {
-          data: dopingData,
-          label: 'Doping',
-          backgroundColor: 'rgba(0, 0, 255, 1)'
-        }]
-    },pointBackgroundColor: 'rgb(255,10,132)' , pointBorderColor : 'rgb(255,10,132)', pointBorderWidth: 10 , pointRadius: 10, pointStyle: 'circle' , 
-    options: {
-      title: {
-        display: true,
-        text: "35 Fastest times up Alpe d'Huez"
-      },
-      legend: {
-        display: true,
-      },
-      
-      showLines: false,
-      scales: {
-        yAxes: [{
-          display: true,
-          scaleLabel: {
+        label: 'Dataset 1',
+        backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
+        borderColor: window.chartColors.red,
+        borderWidth: 1,
+        data: [null].concat(samples.boxplots({ count: 6 }))
+      }, {
+        label: 'Dataset 2',
+        backgroundColor: color(window.chartColors.blue).alpha(0.5).rgbString(),
+        borderColor: window.chartColors.blue,
+        borderWidth: 1,
+        data: samples.boxplots({ count: 6 }).concat([null])
+      }]
+    };
+    window.onload = function () {
+      var ctx = document.getElementById("canvas").getContext("2d");
+      window.myBar = new Chart(ctx, {
+        type: 'horizontalBoxplot',
+        data: boxplotData,
+        options: {
+          responsive: true,
+          legend: {
+            position: 'top',
+          },
+          title: {
             display: true,
-            labelString: 'Rank',
-            fontSize: 16
-          },
-          ticks: {
-            beginAtZero:true,
-            fontSize: 14
-          }
-        }],
-        xAxes: [{
-          type: 'linear',
-          position: 'bottom',
-          display: true,
-          scaleLabel: {
-            display: true,
-            labelString: 'Time (Minutes)',
-            fontSize: 16
-          },
-          gridLines: {
-            display: true
-          },
-          ticks: {
-            beginAtZero:false,
-            fontSize: 14,
-          }
-        }]
-      },
-      tooltips: {
-        displayColors: false,
-        callbacks: {
-          title: function(tooltipItems, data) {
-            var index = tooltipItems[0].index;
-            var datasetIndex = tooltipItems[0].datasetIndex;
-            var dataset = data.datasets[datasetIndex];
-            var datasetItem = dataset.data[index];
-            
-            var person = response.data[datasetItem.id];
-            return person.Name + " - " + person.Nationality;
-          },
-          label: function(tooltipItems, data) {
-            var output = "";
-            
-            var index = tooltipItems.index;
-            var datasetIndex = tooltipItems.datasetIndex;
-            var dataset = data.datasets[datasetIndex];
-            var datasetItem = dataset.data[index];
-            
-            var person = response.data[datasetItem.id];
-            
-            output += "TIme: " + person.Time + "\n | \n";
-            output += "Place: " + person.Place + "\n | \n";
-            output += "Year: " + person.Year + "\n | \n";
-            if (person.Doping === "") {
-              output += "Doping: None";
-            } else {
-              output += "Doping: " + person.Doping;
-            }
-            return output;
+            text: 'Chart.js Box Plot Chart'
           }
         }
+      });
+    };
+    document.getElementById('randomizeData').addEventListener('click', function () {
+      boxplotData.datasets.forEach(function (dataset) {
+        dataset.data = samples.boxplots({ count: 7 });
+      });
+      window.myBar.update();
+    });
+    var colorNames = Object.keys(window.chartColors);
+    document.getElementById('addDataset').addEventListener('click', function () {
+      var colorName = colorNames[boxplotData.datasets.length % colorNames.length];
+      var dsColor = window.chartColors[colorName];
+      var newDataset = {
+        label: 'Dataset ' + boxplotData.datasets.length,
+        backgroundColor: color(dsColor).alpha(0.5).rgbString(),
+        borderColor: dsColor,
+        borderWidth: 1,
+        data: samples.boxplots({ count: boxplotData.labels.length })
+      };
+      boxplotData.datasets.push(newDataset);
+      window.myBar.update();
+    });
+    document.getElementById('addData').addEventListener('click', function () {
+      if (boxplotData.datasets.length > 0) {
+        var month = samples.nextMonth(boxplotData.labels.length);
+        boxplotData.labels.push(month);
+        for (var index = 0; index < boxplotData.datasets.length; ++index) {
+          //window.myBar.addData(randomBoxPlot(), index);
+          boxplotData.datasets[index].data.push(samples.randomBoxPlot());
+        }
+        window.myBar.update();
       }
-    }
-  });
+    });
+    document.getElementById('removeDataset').addEventListener('click', function () {
+      boxplotData.datasets.splice(0, 1);
+      window.myBar.update();
+    });
+    document.getElementById('removeData').addEventListener('click', function () {
+      boxplotData.labels.splice(-1, 1); // remove the label first
+      boxplotData.datasets.forEach(function (dataset, datasetIndex) {
+        dataset.data.pop();
+      });
+      window.myBar.update();
+    });
+  </script>
+</body>
 
-})
-  .catch(function (error) {
-  console.log(error);
-});
-
-</script>
+</html>
